fix(sdk,api,core): remove tool resources
