# src/server/core/acontext_core/schema/tool/tool_reference.py
@@ -1,5 +1,0 @@
-from pydantic import BaseModel
-
-
-class ToolReferenceData(BaseModel):
-    name: str
